maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:7: error: not found: value dir
      cpt=dir
          ^PledgeMaze:30: warning: enclosing method keepHandOnSideWall has result type Unit: return value discarded
  return dir
  ^